# ecobud-server

./: .Dockerfile  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  startserver.sh
.github/workflows/: ci.yaml
develop/: test_bcrypt.py
scripts/: clear_collection.py  find_dupes.py  register_webhook.py  sync_transactions.py
src/ecobud/: __main__.py  app.py  config.py  utils.py
src/ecobud/connections/: mongo.py  tink.py
src/ecobud/model/: analytics.py  bank.py  transactions.py  user.py
tests/: test_app.py  test_utils.py
tests/connections/: test_tink.py
tests/model/: test_analytics.py  test_transactions.py  test_user.py
