[project]
name = "ecobud-server"
version = "0.1.0"
description = "APIs for the ecobud app."
authors = [
    {name = "Marco Pistilli", email = "pistilli.mrc@gmail.com"}
]
readme = "README.md"
dependencies = [
    "flask",
    "pymongo",
    "requests",
    "curlify",
    "bcrypt",
    "cachetools",
    "gunicorn",
    "dacite"
]

[project.optional-dependencies]
dev = ["black", "pytest", "isort"]

[build-system]
requires = ["setuptools"]

[tool.black]
line-length = 120
target-version = ["py37"]
