[project]
name = "ecobud-server"
version = "0.1.0"
description = "APIs for the ecobud app."
authors = [
    {name = "Marco Pistilli", email = "pistilli.mrc@gmail.com"}
]
readme = "README.md"
dependencies = [
    "flask",
    "pymongo",
    "requests",
    "curlify",
    "bcrypt",
    "cachetools",
    "gunicorn",
    "dacite"
]

[project.optional-dependencies]
dev = ["black", "pytest", "isort", "jsondiff", "coverage", "pre-commit"]

[build-system]
requires = ["setuptools"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.coverage.run]
branch = true
source = ["src/ecobud"]

[tool.coverage.report]
show_missing = true
fail_under = 80