[project]
name = "ecobud-server"
version = "0.1.0"
description = "APIs for the ecobud app."
authors = [{ name = "Marco Pistilli", email = "pistilli.mrc@gmail.com" }]
readme = "README.md"
dependencies = [
    "flask",
    "pymongo",
    "requests",
    "curlify",
    "bcrypt",
    "cachetools",
    "gunicorn",
    "dacite",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "isort",
    "jsondiff",
    "coverage",
    "pre-commit",
    "pytest-env",
]

[build-system]
requires = ["setuptools"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.coverage.run]
branch = true
source = ["src/ecobud"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_also = ["__main__"]

[tool.isort]
profile = "black"

[tool.pytest_env]
TINK_CLIENT_ID = "tink-client-id"
TINK_CLIENT_SECRET = "tink-client-secret"
MONGO_CONNECTION_STRING = "mongo-url"
SELF_BASE_URL = "self-url"
FLASK_SECRET_KEY = "flask-secret-key"
MONGO_DB_NAME = "mongo-db-name"
